# KafkAvroTemplate

./: .gitignore  LICENSE  README.md  consumers.py  docker-compose.yml  main.py  pyproject.toml
src/: app.py  schema.avsc  utils.py
